# dafnedset

./: Makefile  README.md  pyproject.toml
dafnedset/: __init__.py  _constants.py  _db_connect.py  base.py  datasets.py  helpers.py  transformations.py
dafnedset/extensions/: __init__.py  contained.py  delayed.py  patch.py
dafnedset/monkey/: patch_add_tools.py  patch_contained.py
dafnedset/presets/: __init__.py  cached_tot.py  neg10.py  pos08.py  pos10.py  total.py  total_pos.py  total_pos_n.py
dafnedset/serve/: __init__.py  base.py  handlers.py  tasks.py
dafnedset/tools/: __init__.py  direct.py  more.py  patch.py
