[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dafnedset"
author = "Javier J. Clavijo"
author-email = "jclavijo@gmail.com"
home-page = "https://jjclavijo.github.io/pydafne/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "numpy",
    "pandas",
    "pyarrow",
    "psycopg2-binary",
    "shapely"
]
requires-python=">=3.3"

[tool.flit.scripts]
dafne_dataserver = "pydafne.data.serve:main"
